Changelog
=========

0.7 (unreleased)
----------------

- Added more strings classifiers items for this package [macagua]
- Added diazo theme manifest file [macagua]

0.6 (11-13-2011)
----------------

- Some fixes and initial public release [davilima6]

0.5 (05-30-2011)
----------------

- Initial implementation uploaded to collective [davilima6]