@@ -1,0 +1,20 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+ <stylesheet
+    id="++theme++plonetheme.motion/styles/global.css"
+    remove="True" />
+
+ <stylesheet
+    id="++theme++plonetheme.motion/styles/hovercard.css"
+    remove="True" />
+
+ <stylesheet
+    id="++theme++plonetheme.motion/styles/services.css"
+    remove="True" />
+
+ <stylesheet
+    id="++theme++plonetheme.motion/styles/style.css"
+    remove="True" />
+
+</object>
