@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<theme>
+    <name>plonetheme.motion</name>
+    <enabled>false</enabled>
+</theme>
